# platform.upstream.pwdutils

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.in  project.config  pwdutils-3.2.19.tar.bz2.delta  pwdutils-3.2.19.tar.bz2.id
etc/: Makefile.am  Makefile.in  groupadd.local  login.defs.5  rpasswd.conf  userdel-post.local  userdel-pre.local
etc/default/: passwd  useradd
etc/init.d/: rpasswdd
lib/: Makefile.am  Makefile.in  authentication.c  call_script.c  check_home.c  check_name.c  chown_dir_rec.c  copy_dir_rec.c  copy_xattr.c  date2str.c  dbg_log.c  error_codes.h  get_caller_dn.c  get_ldap_password.c  get_value.c  group.c  group.h  i18n.h  init_environment.c  is_logged_in.c  libldap.c  libldap.h  lock_database.c  logging.c  logging.h  logindefs.c  msg_table.h  nispasswd.h  nsw.c  nsw.h  parse_crypt_arg.c  parse_crypt_arg.h  parse_grent.c  parse_pwent.c  passwd_nisplus.c  print_error.c  print_version.c  public.h  read-files-group.c  read-files.c  (+15 more)
m4/: Makefile.am  Makefile.in  japhar_grep_cflags.m4
packaging/: pam.patch  pwdutils-glibc216.patch  pwdutils-no-add-needed.patch  pwdutils.changes  pwdutils.spec  useradd.default  useradd.local
packaging/pwdutils-3.2.19-0/: pwdutils-3.2.19.tar.bz2  pwdutils.spec
plugins/: Makefile.am  Makefile.in  liblog_audit.c  liblog_audit.map  liblog_laus.c  liblog_laus.map  liblog_syslog.c  liblog_syslog.map
po/: LINGUAS  Makevars  POTFILES.in  da.gmo  da.po  de.gmo  de.po  fr.gmo  fr.po  id.gmo  id.po  nl.gmo  nl.po  pl.gmo  pl.po  pwdutils.pot  sv.gmo  sv.po  vi.gmo  vi.po
src/: Makefile.am  Makefile.in  chage.1  chage.c  chfn.1  chfn.c  chpasswd.8  chpasswd.c  chsh.1  chsh.c  expiry.1  expiry.c  gpasswd.1  gpasswd.c  groupadd.8  groupadd.c  groupdel.8  groupdel.c  groupmod.8  groupmod.c  grpck.8  grpck.c  grpconv.8  grpconv.c  grpunconv.8  grpunconv.c  newgrp.1  newgrp.c  pam_rpasswd.8  pam_rpasswd.c  pam_rpasswd.map  passwd.1  passwd.c  pwck.8  pwck.c  pwconv.8  pwconv.c  pwunconv.8  pwunconv.c  rpasswd-client.c  (+29 more)
